<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backg">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/mainText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="60sp"
        android:layout_above="@+id/aboveMain"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/aboveMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tap"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:fontFamily="cursive"
        android:text="@string/aboveMain"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/tap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/tap"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="italic"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>