<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backg_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/sight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <ImageButton
                android:id="@+id/imageSight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@mipmap/ic_sight"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageSight"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:fontFamily="cursive"
                android:text="@string/sightText"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/beaches">
            <ImageButton
                android:id="@+id/imageBeaches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@mipmap/ic_beach"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageBeaches"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:fontFamily="cursive"
                android:text="@string/beachesText"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights"
            android:id="@+id/nightlife">

            <ImageButton
                android:id="@+id/imageNightlife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_nightlife"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:fontFamily="cursive"
                android:text="@string/nightlifeText"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/restaurants">

            <ImageButton
                android:id="@+id/imageRestaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_resta"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:fontFamily="cursive"
                android:text="@string/restaurantsText"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="35sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>